Modifed page2 with ordered and unordered lists

--- a/page2.html
+++ b/page2.html
@@ -3,9 +3,42 @@
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="utf-8" />
-    <title></title>
+    <title>Lists</title>
+    <link rel="stylesheet" href="StyleSheet1.css"
 </head>
 <body>
+    <p>An unordered shopping list of my favorite foods</p>
+    <ul>
+        <li>Chicken</li>
+        <li>KBBQ</li>
+        <li>Rice Cakes</li>
+    </ul>
+    <br />
+    <p>An ordered list of todo's I need to get done today</p>
+    <ol>
+        <li>Do better!</li>
+        <li>Breathe!</li>
+        <li>Love!</li>
+    </ol>
+    <br />
+    <p>An unordered list of places I'd like to visit someday</p>
+    <ul>
+        <li>Vancouver</li>
+        <li>Colorado</li>
+    </ul>
+    <br />
+    <p>An ordered list my top 5 movies</p>
+    <ul>
+        <li>Scary Movie</li>
+        <ul>
+            <li>Scream Parody</li>
+        </ul>
+        <li>Gone Girl</li>
+        <li>Scream VI</li>
+        <li>Scream IV</li>
+        <li>Scary Movie 2</li>
 
+    </ul>
 </body>
 </html>
+
