--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html lang="en">
 
 
-
 <head>
 
     <meta charset="utf-8" />
@@ -28,7 +27,7 @@
     <p><em>Anything in between em will be italized</em></p>
 
     <p><a href="https://google.com">Anchor points to Google</a></p>
-    <p><a href="page2.html">Anchor points to Page 2</a></p>
+    <p><a href="page2.html">Click me to go to Page 2</a></p>
 
     <p> this is a test that this is successfully</p>
 
