--- a/page2.html
+++ b/page2.html
@@ -1,11 +1,13 @@
 ﻿<!DOCTYPE html>
 
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
+
 <head>
     <meta charset="utf-8" />
     <title>Lists</title>
-    <link rel="stylesheet" href="StyleSheet1.css"
+    <link rel="stylesheet" href="StyleSheet1.css">
 </head>
+
 <body>
     <p>An unordered shopping list of my favorite foods</p>
     <ul>
@@ -40,5 +42,5 @@
 
     </ul>
 </body>
-</html>
 
+</html>
